--- a/lol/style.css
+++ b/lol/style.css
@@ -9,8 +9,10 @@
   --gray-color: #ddd;
   --main-color: #44dae3;
   --yellow-color: rgb(248, 248, 38);
+  --background-color: #212121;
   /* font-size */
   --title-fontsize: 36px;
+  --vlare-fontsize: 22px;
   --large-fontsize: 18px;
 }
 * {
@@ -21,8 +23,17 @@
   list-style: none;
   color: var(--white-color);
 }
-.title-font {
+button {
+  border: none;
+}
+.title-font-family {
   font-family: "Noto Sans KR", sans-serif;
+}
+.main-color {
+  color: var(--main-color);
+}
+.border-rounded {
+  border-radius: 2px;
 }
 .header {
   display: flex;
@@ -55,4 +66,77 @@
   width: 22px;
   position: relative;
   left: 12px;
+}
+.main {
+  width: 300vw;
+  display: flex;
+}
+.main .main-img {
+  width: 100vw;
+  /* position: relative; */
+  background-size: contain;
+}
+.main .main-img:nth-child(1) {
+  background-image: url(/image/irelia_splash_7.jpg);
+}
+.main .main-img img {
+  display: block;
+  width: 100%;
+}
+.main .main-img:first-child .main-container {
+  position: absolute;
+  right: 10%;
+  top: 25%;
+}
+.main .main-img:first-child .main-container .main-box {
+  border: 2px var(--white-color) solid;
+  display: flex;
+  margin-bottom: 16px;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 16px;
+}
+.main .main-img:first-child .main-container .main-box p {
+  margin: 0;
+  padding: 4px;
+  margin-right: 16px;
+  color: var(--white-color);
+  font-size: var(--vlare-fontsize);
+  font-weight: 800;
+}
+.main .main-img:first-child .main-container .main-box .main-event {
+  background: var(--main-color);
+  color: var(--black-color);
+}
+.notice {
+  background: var(--background-color);
+  display: flex;
+  justify-content: space-around;
+  padding: 80px 80px;
+}
+.notice .card {
+  width: 22%;
+  background: var(--black-color);
+  padding: 8px;
+}
+.notice .card:nth-child(1) .card-image {
+  background-image: url(/image/fizz_splash_12.jpg);
+}
+.notice .card:nth-child(2) .card-image {
+  background-image: url(/image/thresh_splash_8.jpg);
+}
+.notice .card:nth-child(3) .card-image {
+  background-image: url(/image/fiora_Splash_11.jpg);
+}
+.notice .card:nth-child(4) .card-image {
+  background-image: url(/image/irelia_splash_9.jpg);
+}
+.notice .card .card-image {
+  backdrop-filter: blur;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 40px;
+}
+.notice .card .card-image p {
+  font-size: var(--vlare-fontsize);
+  font-weight: 800;
 }
